# administrative_system

./: README.md  main.py  pyproject.toml  requirments.txt
admin_system/: .route_main.py.3045526627~  __init__.py  connections.py  db_auth.py  db_main.py  route_auth.py  route_main.py
admin_system/templates/: base.html  department_list_loop.html  department_loop.html  details.html  employee_list_loop.html  home.html  list.html  login.html  manager_loop.html  nav.html
